Added database tables script and updated readme

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
 
   "scripts": {
+    "create-tables":"node db/createTables.js",
     "server":"node server.js",
     "tx":"node scripts/tx.js",
     "queue":"node scripts/assignMint.js",
